--- a/Translation/map.json
+++ b/Translation/map.json
@@ -132,7 +132,7 @@
         "th":"",
         "id":"Kerajaan Cain"
     },
-    "map.Cain Airport.name":{
+    "map.C1_Cain_Airport.name":{
         "en":"Cain Airport",
         "fr":"Aéroport de Kane",
         "es":"",
