--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5312,7 +5312,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sa Trùng Hiền Nhân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5331,7 +5331,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Mộc Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5350,7 +5350,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Phong Tố Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5369,7 +5369,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kỳ Lân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5388,7 +5388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Thằn Lằn Hung Tợn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5407,7 +5407,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Quái Thú Bùn Lầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5426,7 +5426,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sa Trùng Cúng Thần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5445,7 +5445,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Người Thằn Lằn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5464,7 +5464,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hoa Hùng Cường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7250,7 +7250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Trùng Hiền Nhân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7269,7 +7269,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộc Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7288,7 +7288,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phong Tố Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7307,7 +7307,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỳ Lân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7326,7 +7326,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thằn Lằn Hung Tợn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7345,7 +7345,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quái Thú Bùn Lầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7364,7 +7364,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Trùng Cúng Thần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7383,7 +7383,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người Thằn Lằn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7402,7 +7402,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoa Hùng Cường",
         "ar":"",
         "it":"",
         "pl":"",
