--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1235,7 +1235,7 @@
         "id":""
     },
     "map.C3_Letin_Square.name":{
-        "en":"Letin Harbor",
+        "en":"Letin Square",
         "fr":"Place de Letin",
         "es":"",
         "zh-cn":"",
