--- a/Translation/map.json
+++ b/Translation/map.json
@@ -474,120 +474,6 @@
         "th":"",
         "id":""
     },
-    "map.Instance_20_map1.name":{
-        "en":"Chaotic Jungles North",
-        "fr":"Nord des Jungles Chaotiques",
-        "es":"",
-        "zh-cn":"喧嚣丛林北部",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Hỗn Mang Sâm Lâm - Bắc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "map.Instance_20_map2.name":{
-        "en":"Deathly Mineshaft",
-        "fr":"Mines Mortelles",
-        "es":"",
-        "zh-cn":"死亡矿井",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Hầm Mỏ Tử Thần",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "map.Instance_20_map3.name":{
-        "en":"Summoning Hall",
-        "fr":"Salle d'Invocation",
-        "es":"",
-        "zh-cn":"召唤大厅",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Sảnh Triệu Hồi",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "map.Instance_30_map1.name":{
-        "en":"Pirate Camp Site",
-        "fr":"Site du camp de pirates",
-        "es":"",
-        "zh-cn":"海盗营地入口",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Địa Điểm Trại Hải Tặc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "map.Instance_30_map2.name":{
-        "en":"Pirate Camp",
-        "fr":"Camp Pirate",
-        "es":"",
-        "zh-cn":"海盗营地",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Trại Hải Tặc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "map.Instance_30_map3.name":{
-        "en":"Pirate's Lair",
-        "fr":"Repaire des Pirates",
-        "es":"",
-        "zh-cn":"海盗巢穴",
-        "zh-tw":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Sào Huyệt Hải Tặc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "map.C2_Muradin_Harbor.name":{
         "en":"Muradin Harbor",
         "fr":"Port de Muradin",
@@ -1741,6 +1627,177 @@
         "jp":"",
         "pt":"",
         "vi":"Địa Điểm Thử Thách Của Hiệp Sĩ Thành Cain",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_20_map1.name":{
+        "en":"Chaotic Jungles North",
+        "fr":"Nord des Jungles Chaotiques",
+        "es":"",
+        "zh-cn":"喧嚣丛林北部",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hỗn Mang Sâm Lâm - Bắc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_20_map2.name":{
+        "en":"Deathly Mineshaft",
+        "fr":"Mines Mortelles",
+        "es":"",
+        "zh-cn":"死亡矿井",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hầm Mỏ Tử Thần",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_20_map3.name":{
+        "en":"Summoning Hall",
+        "fr":"Salle d'Invocation",
+        "es":"",
+        "zh-cn":"召唤大厅",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Sảnh Triệu Hồi",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_30_map1.name":{
+        "en":"Pirate Camp Site",
+        "fr":"Site du camp de pirates",
+        "es":"",
+        "zh-cn":"海盗营地入口",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Địa Điểm Trại Hải Tặc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_30_map2.name":{
+        "en":"Pirate Camp",
+        "fr":"Camp Pirate",
+        "es":"",
+        "zh-cn":"海盗营地",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Trại Hải Tặc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_30_map3.name":{
+        "en":"Pirate's Lair",
+        "fr":"Repaire des Pirates",
+        "es":"",
+        "zh-cn":"海盗巢穴",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Sào Huyệt Hải Tặc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_35_map1.name":{
+        "en":"Mysterious Desert",
+        "fr":"Désert Mysterieux",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_35_map2.name":{
+        "en":"Mysterious Crypt",
+        "fr":"Crypte Mysterieuse",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_35_map3.name":{
+        "en":"Ancient Catacomb",
+        "fr":"Catacombe Antique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
