--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5141,7 +5141,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Điềm Vĩ Yết Sư Hùng Mạnh",
+        "vi":"[Linh Trứng] Nhãn Vĩ Yết Sư Hùng Mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7079,7 +7079,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điềm Vĩ Yết Sư Hùng Mạnh",
+        "vi":"Nhãn Vĩ Yết Sư Hùng Mạnh",
         "ar":"",
         "it":"",
         "pl":"",
