--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1759,7 +1759,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Mạc Huyền Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1778,7 +1778,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Thờ Huyền Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1797,7 +1797,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hầm Mộ Cổ Đại",
         "ar":"",
         "it":"",
         "pl":"",
