--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5855,8 +5855,8 @@
         "en":"Wealth",
         "fr":"Richesse",
         "es":"",
-        "zh-cn":"",
-        "zh-tw":"财富",
+        "zh-cn":"财富",
+        "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -6178,7 +6178,7 @@
         "en":"Use no bounded items",
         "fr":"N'utilisez pas d'objet lié",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"使用不绑定道具",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6197,7 +6197,7 @@
         "en":"Warning! Using the bound items option will bind the gear, even if you don't have any bound items on you.",
         "fr":"Attention! L'utilisation de l'option 'Objet liés' lieras l'equipement, même si vous n'avez pas d'objet liés sur vous.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"警告! 使用绑定道具选项将绑定装备，即使您身上没有任何绑定道具。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
