--- a/Translation/map.json
+++ b/Translation/map.json
@@ -535,7 +535,7 @@
         "en":"Desert Competition Zone",
         "fr":"Zone de Défi du désert",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"沙漠竞赛区",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1048,7 +1048,7 @@
         "en":"Doomed Woods",
         "fr":"Bois Maudits",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"死亡树林",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1067,7 +1067,7 @@
         "en":"Downtown Letin",
         "fr":"Ville basse de Letin",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"莱丁城行政区",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1086,7 +1086,7 @@
         "en":"Fungi Sanctuary",
         "fr":"Sanctuaire Fungi",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"真菌圣地",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1105,7 +1105,7 @@
         "en":"Letin Harbor",
         "fr":"Port de Letin",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"莱丁城港口",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1124,7 +1124,7 @@
         "en":"Letin Square",
         "fr":"Place de Letin",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"莱丁城中央广场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1143,7 +1143,7 @@
         "en":"Mutant Jungle",
         "fr":"Jungle Mutante",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"变异之林",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1162,7 +1162,7 @@
         "en":"Road of Requiem",
         "fr":"Route du Requiem",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"宁静之路",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1181,7 +1181,7 @@
         "en":"Sufer Cemetery",
         "fr":"Cimetière de Souffrance",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"苏福尔墓园",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1200,7 +1200,7 @@
         "en":"Sufer Ruins",
         "fr":"Ruines de Souffrance",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"苏福尔废墟",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1219,7 +1219,7 @@
         "en":"Thorny Post",
         "fr":"Poste Épineux",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"荆棘岗哨",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1238,7 +1238,7 @@
         "en":"Twister's Manor",
         "fr":"Manoir Méphitique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1257,7 +1257,7 @@
         "en":"Twister's Manor Floor 1",
         "fr":"Manoir Méphitique Étage 1",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园1层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1276,7 +1276,7 @@
         "en":"Twister's Manor Floor 2",
         "fr":"Manoir Méphitique Étage 2",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园2层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1295,7 +1295,7 @@
         "en":"Twister's Manor Floor 3",
         "fr":"Manoir Méphitique Étage 3",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园3层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1314,7 +1314,7 @@
         "en":"Twister's Manor Floor 4",
         "fr":"Manoir Méphitique Étage 4",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园4层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1333,7 +1333,7 @@
         "en":"Twisted Woods 1",
         "fr":"Forêt Frelatée 1",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者树林1",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1352,7 +1352,7 @@
         "en":"Twisted Woods 2",
         "fr":"Forêt Frelatée 2",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者树林2",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1371,7 +1371,7 @@
         "en":"Anglas's Hideout",
         "fr":"Cachette de Anglas",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"安格拉斯的藏身处",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1390,7 +1390,7 @@
         "en":"Twister's Manor Floor Hall of Elite",
         "fr":"Manoir Méphitique Hall d'Élite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者庄园精英大厅",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1409,7 +1409,7 @@
         "en":"Twister's Backyard",
         "fr":"Arrière-cour Méphitique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"扭曲者后院",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1428,7 +1428,7 @@
         "en":"Uncharted Forest",
         "fr":"Forêt Inexplorée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1447,7 +1447,7 @@
         "en":"Uncharted Forest Floor 1",
         "fr":"Forêt Inexplorée Étage 1",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森1层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1466,7 +1466,7 @@
         "en":"Uncharted Forest Floor 2",
         "fr":"Forêt Inexplorée Étage 2",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森2层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1485,7 +1485,7 @@
         "en":"Uncharted Forest Floor 3",
         "fr":"Forêt Inexplorée Étage 3",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森3层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1504,7 +1504,7 @@
         "en":"Uncharted Forest Floor 4",
         "fr":"Forêt Inexplorée Étage 4",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森4层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1523,7 +1523,7 @@
         "en":"Uncharted Forest Floor 5",
         "fr":"Forêt Inexplorée Étage 5",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森5层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1542,7 +1542,7 @@
         "en":"Uncharted Forest Hall of Elite",
         "fr":"Forêt Inexplorée Hall d'Élite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森精英大厅",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1561,7 +1561,7 @@
         "en":"Uncharted Forest Hall of Elite Deep",
         "fr":"Forêt Inexplorée Hall d'Élite Profond",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之森精英大厅深处",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1580,7 +1580,7 @@
         "en":"Uncharted Path",
         "fr":"Chemin Inexplorée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不归之路",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1599,7 +1599,7 @@
         "en":"Maelstrom",
         "fr":"Maelstrom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"大漩涡",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1751,7 +1751,7 @@
         "en":"Mysterious Desert",
         "fr":"Désert Mysterieux",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"神秘沙漠",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1770,7 +1770,7 @@
         "en":"Mysterious Crypt",
         "fr":"Crypte Mysterieuse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"神秘墓穴",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1789,7 +1789,7 @@
         "en":"Ancient Catacomb",
         "fr":"Catacombe Antique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"古代墓穴",
         "zh-tw":"",
         "kr":"",
         "ru":"",
