--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -284,11 +284,11 @@
         "th": "",
         "id": ""
     },
-    "instance.INSTANCE_35.name":{
-        "en": "City’s Poisonous Fog",
-        "fr": "Brouillard Toxic de la Ville",
+    "instance.INSTANCE_40.name":{
+        "en": "Mysterious Crypt",
+        "fr": "Crypte Mystèrieuse",
         "es": "",
-        "zh-cn": "古城的毒雾",
+        "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -296,18 +296,18 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Độc Vụ Trấn",
+        "vi": "",
         "ar": "",
         "it": "",
         "pl": "",
         "th": "",
         "id": ""
     },
-    "instance.INSTANCE_35.description.reward.normal":{
-        "en": "Lv30 common materials, Costume sets and Runestones.",
-        "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
+    "instance.INSTANCE_40.description.reward.normal":{
+        "en": "Lv40 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv40, Costumes et Pierres runiques",
         "es": "",
-        "zh-cn": "30级普通材料、套装符文石.",
+        "zh-cn": "40级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -315,14 +315,14 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Nguyên liệu thường Cấp 30, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "vi": "Nguyên liệu thường Cấp 40, Bộ Trang Phục và Đá Cổ Ngữ.",
         "ar": "",
         "it": "",
         "pl": "",
         "th": "",
         "id": ""
     },
-    "instance.INSTANCE_35.description.reward.special":{
+    "instance.INSTANCE_40.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
         "es": "",
@@ -335,6 +335,215 @@
         "jp": "",
         "pt": "",
         "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_45.name":{
+        "en": "Fallen Airship",
+        "fr": "Dirigeable Tombé",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_50.name":{
+        "en": "Ravaxi",
+        "fr": "Ravaxi",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_55.name":{
+        "en": "Thorny Heights",
+        "fr": "Hauteurs Épineuses",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_60.name":{
+        "en": "Deep Blue City",
+        "fr": "Ville Bleu Profond",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_65.name":{
+        "en": "Letin Harbor",
+        "fr": "Port de Letin",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_70.name":{
+        "en": "Nordic Lands",
+        "fr": "Terres Nordiques",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_80.name":{
+        "en": "...",
+        "fr": "...",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_90.name":{
+        "en": "Rat Crisis",
+        "fr": "Crise des Rats",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_95A.name":{
+        "en": "Opera House Conspiracy",
+        "fr": "Complot de l'Opéra",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_95B.name":{
+        "en": "Slime Opera House",
+        "fr": "L'opéra Slime",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_95C.name":{
+        "en": "Opera House Bandits",
+        "fr": "Bandits de l'Opéra",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
         "ar": "",
         "it": "",
         "pl": "",
