--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12179,8 +12179,8 @@
         "id":""
     },
     "item.10513.name":{
-        "en":"[D]Hanes Metal Piece",
-        "fr":"[D]Pièce de Métal d'Hanes",
+        "en":"[D]Harnes Metal Piece",
+        "fr":"[D]Pièce de Métal d'Harnes",
         "es":"",
         "zh-cn":"D级哈恩斯金属",
         "zh-tw":"",
@@ -12198,8 +12198,8 @@
         "id":""
     },
     "item.10514.name":{
-        "en":"[C]Hanes Metal Piece",
-        "fr":"[C]Pièce de Métal d'Hanes",
+        "en":"[C]Harnes Metal Piece",
+        "fr":"[C]Pièce de Métal d'Harnes",
         "es":"",
         "zh-cn":"C级哈恩斯金属",
         "zh-tw":"",
@@ -12217,8 +12217,8 @@
         "id":""
     },
     "item.10515.name":{
-        "en":"[B]Hanes Metal Piece",
-        "fr":"[B]Pièce de Métal d'Hanes",
+        "en":"[B]Harnes Metal Piece",
+        "fr":"[B]Pièce de Métal d'Harnes",
         "es":"",
         "zh-cn":"B级哈恩斯金属",
         "zh-tw":"",
@@ -12236,8 +12236,8 @@
         "id":""
     },
     "item.10516.name":{
-        "en":"[A]Hanes Metal Piece",
-        "fr":"[A]Pièce de Métal d'Hanes",
+        "en":"[A]Harnes Metal Piece",
+        "fr":"[A]Pièce de Métal d'Harnes",
         "es":"",
         "zh-cn":"A级哈恩斯金属",
         "zh-tw":"",
